Fixed table stretching bug in chrome

--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -17,6 +17,7 @@ td,th{
 
 td.tableValue{
 	font-size: 0.9em;
+	word-break: break-word;
 }
 
 #content{
